--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "generator-openquest",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A yeoman generator for Open Quest organization.",
   "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": ["app"],
+  "files": [
+    "app"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenQuest/generator-openquest.git"
